crates/executor/src/tests/sql/commands/snapshots/rlike_regexp/query_rlike_regexp_basic.snap
---
source: crates/executor/src/tests/sql/commands/rlike_regexp.rs
description: "\"SELECT v\n  FROM strings\n  WHERE v REGEXP 'San* [fF].*'\n  ORDER BY v\""
info: "Setup queries: CREATE OR REPLACE TABLE strings (v VARCHAR(50))\nAS SELECT * FROM VALUES\n  ('San Francisco'),\n  ('San Jose'),\n  ('Santa Clara'),\n  ('Sacramento'),\n  ('Contains embedded single \\\\\\\\backslash')"
---
Ok(
    [
        "+---------------+",
        "| v             |",
        "+---------------+",
        "| San Francisco |",
        "+---------------+",
    ],
)
