crates/executor/src/tests/sql/commands/snapshots/rlike_regexp/query_rlike_regexp_embedded_backslash.snap
---
source: crates/executor/src/tests/sql/commands/rlike_regexp.rs
description: "r\"SELECT v, v REGEXP 'San\\\\b.*' AS matches\n  FROM strings\n  ORDER BY v\""
info: "Setup queries: CREATE OR REPLACE TABLE strings (v VARCHAR(50))\nAS SELECT * FROM VALUES\n  ('San Francisco'),\n  ('San Jose'),\n  ('Santa Clara'),\n  ('Sacramento'),\n  ('Contains embedded single \\\\\\\\backslash')"
---
Ok(
    [
        "+-------------------------------------+---------+",
        "| v                                   | matches |",
        "+-------------------------------------+---------+",
        "| Contains embedded single \\backslash | false   |",
        "| Sacramento                          | false   |",
        "| San Francisco                       | true    |",
        "| San Jose                            | true    |",
        "| Santa Clara                         | false   |",
        "+-------------------------------------+---------+",
    ],
)
